# huffman-archiver

./: CMakeLists.txt  README.md  constants.h  main.cpp
BitReader/: BitReader.cpp  BitReader.h
BitWriter/: BitWriter.cpp  BitWriter.h
Coder/: Coder.cpp  Coder.h
Decoder/: Decoder.cpp  Decoder.h
ExtraIOFunctions/: ExtraInput.h  ExtraOutput.h
HuffmanTrie/: HuffmanTrie.cpp  HuffmanTrie.h
Modifiers/: Modifiers.cpp  Modifiers.h
PriorityQueue/: PriorityQueue.h
